--- a/index.html
+++ b/index.html
@@ -2,135 +2,215 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Глейси</title>
   </head>
-  <body>
-    <header>
-      <div class="container clearfix">
-        <div class="header-logo">
+  <body class="index">
+    <input type="radio" id="slide-btn1" name="toggle" checked>
+    <input type="radio" id="slide-btn2" name="toggle">
+    <input type="radio" id="slide-btn3" name="toggle">
+    <div class="site-wrapper">
+    </div>
+    <header class="container clearfix">
+      <div class="header-top clearfix">
+        <a class="header-logo">
           <img src="img/header-logo.png" alt="Логотип" width="154" height="64">
-        </div>
+        </a>
         <nav class="main-navigation">
-          <ul>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Доставка и оплата</a></li>
-            <li><a href="#">О Компании</a></li>
+          <ul class="main-menu">
+            <li class="navigation-catalog"><a class="btn-white" href="catalog.html"><span>Каталог</span></a>
+              <ul class="sub-menu">
+                <li><a href="#">Новинки</a></li>
+                <li><a href="catalog.html">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+              </ul>
+            </li>
+            <li><a class="btn-white" href="#"><span>Доставка и оплата</span></a></li>
+            <li><a class="btn-white" href="#"><span>О Компании</span></a></li>
           </ul>
         </nav>
         <div class="user-block">
-          <a class="header-search" href="#">Поиск</a>
-          <a class="header-login" href="#">Вход</a>
-          <a class="header-basket" href="#">Пусто</a>
+          <div class="search-container">
+            <a href="#" class="header-search">Поиск</a>
+            <div class="hiden-search">
+              <input class="input-style" type="text" id="search-input">
+              <label class="label-style" for="search-input">Что ищем?</label>
+            </div>
+          </div>
+          <div class="login-container">
+            <a href="#" class="header-login">Вход</a>
+            <div class="hiden-login">
+              <form method="get" action="#" name="login-form">
+                <input class="input-style" type="text" id="login-email">
+                <label class="label-style login-hint" for="login-email">Электронная почта</label>
+                <input class="input-style" type="password" id="login-password">
+                <label class="label-style password-hint" for="login-password">Пароль</label>
+                <button class="btn-red">Войти</button>
+                <div class="login-registration-block">
+                  <a href="#"><span class="link">Забыли пароль?</span></a>
+                  <a href="#"><span class="link">Новая регистрация</span></a>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div>
+            <a href="#" class="header-basket">Пусто</a>
+          </div>
+        </div>
+      </div>
+      <div class="header-bottom clearfix">
+        <section class="index-working-hours">
+          <span class="working-time">С 10 до 20, ежедневно</span>
+          <span class="header-number">8 812 450-25-25</span>
+        </section>
+      </div>
+      <div class="slider-bar">
+        <div class="slide slide1">
+          <p class="slide-title">Крем-брюле и пломбир с малиновым джемом</p>
+          <a class="btn-red" href="#">Давайте оба!</a>
+        </div>
+        <div class="slide slide2">
+          <p class="slide-title">Шоколадный пломбир и лимонный сорбет</p>
+          <a class="btn-red" href="#">Давайте оба!</a>
+        </div>
+        <div class="slide slide3">
+          <p class="slide-title">Пломбир с помадкой и клубничный щербет</p>
+          <a class="btn-red" href="#">Давайте оба!</a>
+        </div>
+        <div class="slider-controls">
+          <label for="slide-btn1"></label>
+          <label for="slide-btn2"></label>
+          <label for="slide-btn3"></label>
         </div>
       </div>
     </header>
     <main>
       <div class="container clearfix">
-        <div class="clearfix">
-          <section class="index-working-hours">
-            <p>С 10 до 20, ежедневно</p>
-            <p>8 812 450-25-25</p>
-          </section>
-        </div>
-        <div class="slider-bar">
-          <div class="slider-logo">Крем-брюле и пломбир с малиновым джемом</div>
-          <a class="slider-btn" href="#">Давайте оба!</a>
-        </div>
         <div class="banners clearfix">
           <div class="banners-first">
             <p class="banners-tagline">Малинка даром!</p>
-            <p class="banners-promo">При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="button" href="#">Хочу варенье!</a>
+            <p class="banners-promo">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="btn-red" href="#">Хочу варенье!</a>
           </div>
           <div class="banners-second">
             <p class="banners-tagline">Шоколадки даром!</p>
             <p class="banners-promo">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a class="button" href="#">Хочу шоколадки!</a>
+            <a class="btn-red" href="#">Хочу шоколадки!</a>
           </div>
         </div>
-        <div class="hits clearfix">
-          <section>
-            <div class="hits-image">
-              <img src="img/item1.jpg" alt="Сливочное с апельсиновым джемом" width="267" height="267">
-              <p>310<span>Р</span>/кг</p>
+        <ul class="cremy-item clearfix">
+          <li>
+            <div class="cremy-item-layout">
+              <img src="img/item1.jpg" alt="Товар1" width="267" height="267">
+              <p class="price">310₽<span class="price-low">/кг</span></p>
+              <a class="link-blog" href="#"><span class="link">Сливочное с апельсиновым джемом и цитросовой стружкой</span></a>
+              </div>
+            <a class="btn-red" href="#">Быстрый Просмотр</a>
+          </li>
+          <li>
+            <div class="cremy-item-layout">
+              <img src="img/item2.jpg" alt="Товар2" width="267" height="267">
+              <p class="price">380₽<span class="price-low">/кг</span></p>
+              <a class="link-blog" href="#"><span class="link">Сливочно-кофейное с кусочками шоколада</span></a>
             </div>
-            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-          </section>
-          <section>
-            <div class="hits-image">
-              <img src="img/item2.jpg" alt="Сливочнокофейное" width="267" height="267">
-              <p>380<span>Р</span>/кг</p>
+            <a class="btn-red" href="#">Быстрый Просмотр</a>
+          </li>
+          <li>
+            <div class="cremy-item-layout">
+              <img src="img/item3.jpg" alt="Товар3" width="267" height="267">
+              <p class="price">355₽<span class="price-low">/кг</span></p>
+              <a class="link-blog" href="#"><span class="link">Сливочно-клубничное с присыпкой из белого шоколада</span></a>
             </div>
-            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-          </section>
-          <section>
-            <div class="hits-image">
-              <img src="img/item3.jpg" alt="Сливочноклубничное" width="265" height="267">
-              <p>355<span>Р</span>/кг</p>
+            <a class="btn-red" href="#">Быстрый Просмотр</a>
+          </li>
+          <li>
+            <div class="cremy-item-layout">
+              <img src="img/item4.jpg" alt="Товар4" width="267" height="267">
+              <p class="price">415₽<span class="price-low">/кг</span></p>
+              <a class="link-blog" href="#"><span class="link">Сливочное крем-брюле с карамельной подливкой</span></a>
             </div>
-            <a href="#">Сливочно-клубничное с присыпкой из белго шоколада</a>
-          </section>
-          <section>
-            <div class="hits-image">
-              <img src="img/item4.jpg" alt="Сливочное крем-брюле" width="267" height="267">
-              <p>415<span>Р</span>/кг</p>
-            </div>
-            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-          </section>
-        </div>
+            <a class="btn-red" href="#">Быстрый Просмотр</a>
+          </li>
+        </ul>
         <article class="gllace-about clearfix">
-          <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженного собственного производства на развес</h3>
-          <p class="gllace-advantage">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-          <p class="gllace-advantage">Закупка ингридиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <p class="gllace-advantage">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-          <p class="gllace-advantage">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+          <h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+          <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
-        <div class="clearfix">
+        <div class="blog-layout clearfix">
           <section class="blog-news">
-            <p class="blog-news-title">Новое в нашем блоге</p>
-            <p class="blog-news-item"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
+            <p>Новое в нашем блоге</p>
+            <h2><a class="blog-news-item" href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
           </section>
           <div class="delivery">
-            <form method="get">
+            <div class="delivery-layer">
               <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-              <input type="text" name="e-mail" placeholder="Электронная почта">
-              <button>Отправить</button>
-            </form>
+              <form method="get" action="#">
+                <input class="input-style" type="text" id="delivery-email">
+                <label class="label-style" for="delivery-email">Электронная почта</label>
+                <a class="btn-red" href="#">Отправить</a>
+              </form>
+            </div>
           </div>
         </div>
-        <div class="map-block">
-          <div class="map">
-            <section class="feedback">
-              <p>Адрес главного офиса и офлайн магазина:
-              <strong>ул. Большая Конюшенная 19/8, Санкт-Петербург</strong></p>
-              <p>Для заказов по телфону:
-              <strong>8 812 450-25-25</strong>
-              (с 10 до 20 ежедневно)</p>
-              <a class="button" href="#">Форма обратной связи</a>
-            </section>
-        </div>
       </div>
+        <div class="map-block">
+          <div class="map container">
+            <section class="feedback">
+              <p>Адрес главного офиса<br>
+               и офлайн магазина:</p>
+              <p><strong>ул. Большая Конюшенная<br>
+               19/8, Санкт-Петербург</strong></p>
+              <p>Для заказов по телефону:</p>
+              <p><strong>8 812 450-25-25</strong></p>
+              <p>(с 10 до 20 ежедневно)</p>
+              <a class="btn-red" href="examplepage.ru" target="_blank">Форма обратной связи</a>
+            </section>
+          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5866340350924!2d30.32413472434565!3d59.93900109334186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487250005183" width="940" height="430" style="border:0" allowfullscreen></iframe>
+        </div>
     </main>
-    <footer>
+    <footer class="main-footer">
       <div class="container clearfix">
         <div class="social-block">
-          <a href="#"><img src="#">Twitter</a>
-          <a href="#"><img src="#">Instagram</a>
-          <a href="#"><img src="#">Facebook</a>
-          <a href="#"><img src="#">VK</a>
+          <a class="btn-tw" href="#">Twitter</a>
+          <a class="btn-inst" href="#">Instagram</a>
+          <a class="btn-fb" href="#">Facebook</a>
+          <a class="btn-vk" href="#">VK</a>
         </div>
         <ul class="helpful-information">
-          <li><a href="#">Для поставщиков</a></li>
-          <li><a href="#">О производстве</a></li>
+          <li><a class="information-for-produser" href="#">Для поставщиков</a></li>
           <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
         <div class="copyright">
-          <img src="img/htmllogo-footer.png" alt="HTML Academy">
-          <p>Сделано в <a href="#">HTML Academy ©</a>2017</p>
+          <a><img src="img/htmllogo-footer.png" alt="HTML Academy" width="108" height="38"></a>
+          <p>Сделано в <a href="#">HTML Academy</a> ©  2017</p>
         </div>
       </div>
     </footer>
+    <div class="popup-layout">
+      <div class="index-popup">
+        <p>Мы обязательно вам ответим!</p>
+        <button class="cross" type="button" name="popup-close">Закрыть</button>
+        <input class="input-style popup-input-name" type="text" id="popup-text-name">
+        <label class="label-style popup-label-name" for="popup-text-name">Как вас зовут?</label>
+        <input class="input-style popup-input-email" type="text" id="popup-text-email">
+        <label class="label-style" for="popup-text-email">Ваша почта для ответа?</label>
+        <textarea class="input-style popup-input-offers" id="popup-text-offers"></textarea>
+        <label class="label-style" for="popup-text-offers">Напишите что-нибудь...</label>
+        <div class="popum-btn-layout">
+          <button class="btn-red">Отправить</button>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/script.min.js"></script>
   </body>
 </html>
